<resources>
    <string name="app_name">Hearthstone API</string>
    <string name="facebook_app_id">2473295659563839</string>
    <string name="fb_login_protocol_scheme">fb2473295659563839</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="country_prompt">Choose a country</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_melt">🔥 Melt </string>
    <string name="finish_button_melt">🔥🔥🔥🔥GO🔥🔥🔥🔥</string>
    <string name="finish_button_craft">🔧 GO 👩‍🔧</string>
    <string name="button_craft">🔨 Craft</string>
    <string name="button_quizz">🎓 Quizz</string>
    <string name="button_market">Market</string>
    <string name="button_exchange">Exchange</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_get_quizz">Take me question for 10 golds</string>
    <string name="input_login">Login</string>
    <string name="input_password">Password</string>
    <string name="rules_melt">Rules : You will melt your card to upgrade it. Unfortunately you are a bad smelter and chances are that you will fail your melting and thus loose your card :)</string>
    <string name="rules_craft">Rules : You will have to choose three cards to craft a new one. Unfortunately your vision is blurry, you can not know in advance which card you are going to create 😎</string>

    <string name="title_shop">Shop</string>
    <string name="title_craft">Craft Card 🔧</string>
    <string name="melt_step_one">Step 1 : Choose your card</string>
    <string name="craft_step_one">Step 1 : Choose three cards</string>
    <string name="melt_step_two">Step 2 : Let\'s Melt</string>
    <string name="craft_step_two">Step 2 : Let\'s Craft</string>
    <string name="title_lobby">Settings</string>
    <string name="title_melt">Melt Card</string>
    <string name="nav_button_inventory">Inventory</string>
    <string name="nav_button_shop">Shop</string>
    <string name="nav_button_game">Game</string>
    <string name="nav_button_settings">Settings</string>
    <string name="label_connexion">Connexion</string>
    <string name="label_connect_with">Connexion with</string>
    <string name="label_login_or_name">Login or Name</string>
    <string name="wrong_answer">Its not good answer :(</string>
    <string name="you_have">You have</string>
    <string name="golds">Golds</string>
    <string name="right_answer">Good answer you win 20 golds</string>
    <string name="label_card_id">Id: </string>
    <string name="label_card_name">Name: </string>
    <string name="label_card_cardClass">Card Class: </string>
    <string name="label_card_cost">Cost: </string>
    <string name="label_card_playerClass">Player class: </string>
    <string name="label_card_health">Health: </string>
    <string name="label_card_attack">Attack: </string>
    <string name="label_card_text">Text: </string>
    <string name="label_card_type">Type: </string>
    <string name="label_card_rarity">Rarity: </string>
    <string name="title_quizz">Super Quizz</string>
    <string name="coming">Coming soon ... </string>
    <string name="idMoney">money</string>
    <string name="idUser">id</string>
    <string name="voidString"></string>
    <string name="content_description">Cards</string>
    <string name="label_price">Price : </string>
    <string name="label_StateAccount">You have : </string>
    <string name="url">https://api.coopuniverse.fr/</string>
    <string name="label_answer_quizz">Answer : </string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="simple">Simple</string>
    <string name="networkError">Awe :3 You have a network error</string>
    <string name="insufficient_credit">Attention: Your Credit is insufficient! The operation canceled</string>
    <string name="attention_credit">Attention: Your will use all your Credit!</string>
    <string name="EXCHANGE">Exchange</string>
    <string name="info_craft">Info : Select three different card</string>
    <string name="result_craft_title">Craft result</string>
    <string name="result_melt_title">Melt result</string>
    <string name="types">Type: </string>
    <string name="rarity">Rarity: </string>
    <string name="classCard">Class card: </string>
    <string name="id">Id: </string>
    <string name="win">win</string>
    <string name="loose">loose</string>
    <string name="winning_label_craft">🎉 Congratulations, you have crafted </string>
    <string name="wrong_id">Your login or password doesn’t match any account</string>
</resources>

