<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.view.fragment.CardDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="Detail de la carte"
            android:textColor="@color/colorTitleText"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/idCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="82dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/label_card_id"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardImage"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/rarity"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/label_card_rarity"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/idCard"
            app:layout_constraintTop_toBottomOf="@+id/cardImage"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/cardType"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="82dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/label_card_type"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idCard"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/classCard"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/label_card_cardClass"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardType"
            app:layout_constraintTop_toBottomOf="@+id/rarity"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/cardImage"
            android:layout_width="297dp"
            android:layout_height="450dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@drawable/ex" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>