<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activity.activity.MainActivity"
    tools:layout_editor_absoluteY="25dp">


    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/sign_in_google"
        android:layout_width="264dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"

        android:text="@string/google_sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:isDarkTheme="false"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/sign_in_facebook"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_field"
        android:layout_width="258dp"
        android:layout_height="49dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/input_login"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"
        android:textColorLink="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@+id/pass_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/pass_field"
        android:layout_width="260dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:textColorLink="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@+id/errorView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_in_simple"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/shape"
        android:text="@string/button_sign_in"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/label_connexion"
        android:textAllCaps="true"
        android:textColor="@color/colorTitleText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/login_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />

    <TextView
        android:id="@+id/errorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_simple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>